# human-task-dataset-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  STATUS.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  ETHICS_AND_CONSENT.md  ROADMAP.md  SIM_LOOP.md  capture-rig-hardware.md  human_task_dataset_pipeline_mvp.md
docs/demo/: m25_visuomotor_eval.json  m2_eval.json
docs/m2/: a1-physics-grasp.md  a2-physics-demos.md  a3-physics-rollout.md  b1-camera-render.md  b2-image-demos.md  b3-visuomotor.md  c1-domain-randomization-scope.md  c1-domain-randomization-state.md  c1-eval-n40-canonical.json  c1-eval-n40-novel-dr.json  e1-eval-n-scope.md  e1-eval-n40-state.json  e1-eval-n40-visuomotor.json  ood1-eval-n40-ood.json  ood1-generalization-scope.md  ood1-generalization-state.md  r1-real-arm-scope.md  r2-shapesort-state.md
docs/schemas/: Consent.schema.json  DatasetRelease.schema.json  DeviceConfig.schema.json  EventMarker.schema.json  Manifest.schema.json  Participant.schema.json  Session.schema.json  TaskProtocol.schema.json
docs/superpowers/plans/: 2026-06-20-human-task-dataset-pipeline-v0.1.md  2026-06-21-consent-filtering.md  (+28 more)
ontology/: README.md  competency-questions.yaml  htdp-tasks.yaml
protocols/: reach-grasp-place.md
src/htdp/: __init__.py  catalog.py  cli.py  validate.py
tests/: _xdf_writer.py  test_bids_channels.py  test_bids_events.py  test_bids_export.py  test_bids_labels.py  test_bids_motion_wide.py  test_bids_sidecars.py  test_canonical.py  test_catalog.py  test_checksums.py  test_cli_learn.py  test_cli_shapesort.py  test_cli_shell.py  test_cli_sim_task.py  test_consent.py  test_eeg_bids_binary.py  test_eeg_bids_export.py  test_eeg_bids_fs.py  test_eeg_bids_header.py  test_eeg_bids_meta.py  test_eeg_consent_filtering.py  test_eeg_rosbag_export.py  test_frame.py  test_ik_export.py  test_ik_replay.py  test_ingest_eeg_roundtrip.py  test_ingest_roundtrip.py  test_integration_pipeline.py  test_load_pose.py  test_mapping.py  test_mapping_eeg.py  test_modalities.py  test_ontology.py  test_per_session_consent.py  test_processing.py  test_qc.py  test_reader.py  test_release.py  test_release_bids_export.py  test_release_bids_session.py  (+20 more)
tests/learn/: test_dataset.py  test_eval.py  test_obs.py  test_package_imports.py  test_policy.py  test_rollout.py  test_train.py
tests/replay/: test_arm_ik.py  test_camera_render.py  test_domain_randomization.py  test_episode.py  test_episode_cube_xy.py  test_franka_model.py  test_physics_episode.py  test_physics_scene.py  test_render.py  test_scene.py  test_so_arm100_model.py
tests/serve/: test_argv.py  test_cli_serve.py  test_job_endpoints.py  test_jobmanager.py  test_read_endpoints.py
tests/shapesort/: test_classical_detect.py  test_errors.py  test_eval.py  test_orchestrator.py  test_vocab.py
(+84 files in other folders)
