[project]
name = "htdp"
version = "0.2.0"
description = "Consent-based human-task dataset pipeline (real-hardware ingest + governance)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "polars>=1.0",
    "pyarrow>=16.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
replay = ["mujoco>=3.1", "mink>=1.1", "daqp>=0.5", "imageio[ffmpeg]>=2.34"]
learn = ["torch>=2.2", "mujoco>=3.1", "mink>=1.1", "daqp>=0.5", "numpy>=1.26"]
ingest = ["pyxdf>=1.16"]
rosbag = ["rosbags>=0.10"]
shapesort = ["opencv-python-headless>=4.9", "openai-whisper>=20231117", "pillow>=10.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "pyyaml>=6.0"]

[project.scripts]
htdp = "htdp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htdp"]
artifacts = ["src/htdp/qc/templates/*.j2", "src/htdp/replay/assets/*.xml", "src/htdp/replay/assets/franka/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
# Tests guard heavy optional-dep imports with pytest.importorskip before importing the module
# under test, so module-level imports legitimately follow a statement (E402).
"tests/**" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "mujoco"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "htdp.replay.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "mink.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rosbags.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
